-
Type:
Bug
-
Status: Resolved
-
Priority:
Critical
-
Resolution: Fixed
-
Affects Version/s: Impala 2.12.0
-
Fix Version/s: Impala 2.12.0
-
Component/s: Backend
-
Labels:None
-
Target Version:
-
Epic Color:ghx-label-4
The file handle cache has been disabled by default due to two HDFS issues:
HDFS-12528:Â Add an option to not disable short-circuit reads on failures
HDFS-14872:Â CryptoInputStream should implement unbuffer
These two issues have been fixed and are now incorporated in the CDH components in the toolchain.
This means that the file handle cache can be reenabled by default.